<resources>
    <string name="app_name">perpusta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="integrated_by">Integrated by</string>
    <string name="logo">logo</string>
    <string name="login">LOGIN</string>
    <string name="upt">UPT Perpustakaan Unila</string>
    <string name="halo">Hallo,</string>
    <string name="nama">Nama Pengguna</string>
    <string name="cari">Cari Buku</string>
    <string name="home">Home</string>
    <string name="circulation">Circulation</string>
    <string name="reminder">Reminder</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="denda">Denda Buku</string>
    <string name="title">Title</string>
    <string name="image">Image</string>
    <string name="book_image_description">desc</string>
    <string name="tanggal_kembali">Tanggal Kembali :</string>
    <string name="tanggal_selesai">Tanggal Selesai :</string>
    <string name="tanggal_pinjam">Tanggal Pinjam :</string>
    <string name="status_peminjaman">Status Peminjaman</string>
    <string name="user">Asha Imalia Zahra</string>
    <string name="npm">2015061006</string>
    <string name="tagihan_denda_anda">Tagihan Denda Anda</string>
    <string name="fine">Rp 20000</string>
    <string name="daftar_denda_buku">Daftar Denda Buku</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="penerbit">Penerbit</string>
    <string name="desc_perpusta">Perpusta adalah aplikasi untuk mengetahui status peminjaman buku di Perpustakaan Universitas Lampung, Gunakan Reminder untuk pengembalian buku.</string>
    <string name="periksa">Periksa Status Peminjaman Buku Kamu di Perpustakaan!</string>
    <string name="perpusta">Perpusta adalah aplikasi untuk mengetahui status peminjaman buku di Perpustakaan Universitas Lampung</string>
    <string name="daftar_buku">Daftar Buku</string>
    <string name="create_task">Buat Reminder</string>
    <string name="title_task">Judul Reminder</string>
    <string name="data">data</string>
    <string name="time">waktu</string>
    <string name="cancel">Kembali</string>
    <string name="timer">Jam</string>
    <string name="to_edit">Edit</string>
    <string name="delete">Hapus</string>
    <string name="new_task">New Task</string>
    <string name="empty_task">Ups! Anda tidak memiliki \n reminder yang harus diselesaikan hari ini</string>
    <string name="cek_buku_dipinjam">cek buku yang Kamu pinjam di Perpustakaan</string>
    <string name="info_denda">Keterlambatan pengembalian buku pada Perpustakaan Universitas Lampung dikenai denda sebesar Rp.500 /hari</string>
    <string name="daftar_buku_dipinjam">Daftar Buku yang Dipinjam</string>
    <string name="daftar_riwayat_peminjaman_buku">Daftar Riwayat Peminjaman Buku</string>
    <string name="status_kembali">Status Kembali</string>
    <string name="logging_in_please_wait">Logging In, Please wait</string>
    <string name="design">design</string>
    <string name="img">img</string>
    <string name="icon">icon</string>
    <string name="Nothing_here">Nothing here!</string>
</resources>