<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/logoLogin"
        android:contentDescription="@string/logo"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:scaleType="centerInside"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_nobg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLogin"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="20dp"
        android:background="@color/background_color"
        android:backgroundTint="@color/background_color"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@drawable/card_text">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/loginText"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/card_edittext"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:textColorHint="#FFFFFF"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:textColor="@color/white"
                android:drawablePadding="8dp"
                android:backgroundTint="@color/light_blue"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/card_edittext"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textColorHint="#FFFFFF"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:textColor="@color/white"
                android:drawablePadding="8dp"
                android:backgroundTint="@color/light_blue"
                />

            <Button
                android:layout_width="203dp"
                android:layout_height="60dp"
                android:text="@string/login"
                android:id="@+id/loginButton"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/blue"
                app:cornerRadius = "20dp"/>

            <TextView
                android:id="@+id/integrated_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integrated_by"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/upt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upt"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/anim_login"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/anim_login"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>