<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basket_card_height"
        android:layout_margin="@dimen/margin_medium"
        app:cardBackgroundColor="@color/peachcream"
        app:cardCornerRadius="@dimen/card_corner_radius_small"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:padding="@dimen/padding_medium">

                <ImageView
                    android:id="@+id/bookBasketImageView"
                    android:src="@drawable/book_money"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/book_image_description" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitleBook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/judul_buku"
                    android:textAlignment="center"
                    android:textColor="@color/eden"
                    android:textSize="@dimen/text_size_small"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                   />

                <TextView
                    android:id="@+id/tvDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:gravity="center"
                    android:lines="2"
                    android:text="@string/tanggal_pinjam"
                    android:textAlignment="center"
                    android:textColor="@color/eden"
                    android:textSize="@dimen/text_size_very_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitleBook"
                    />

                <TextView
                    android:id="@+id/tvFine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:gravity="center"
                    android:text="@string/denda"
                    android:textAlignment="center"
                    android:textColor="@color/eden"
                    android:textSize="@dimen/text_size_very_small"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDueDate"
                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/bookBasketDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/chardonnay"
                android:contentDescription="@string/img"
                android:padding="@dimen/padding_small"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>