<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/basket_card_height"
        android:layout_margin="@dimen/margin_medium"
        app:cardBackgroundColor="@color/peachcream"
        app:cardCornerRadius="@dimen/card_corner_radius_small"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:padding="@dimen/padding_medium">

                <ImageView
                    android:id="@+id/bookBasketImageView"
                    android:src="@drawable/book_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/book_image_description" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_big"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitleStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/margin_very_small"
                    android:text="@string/judul_buku"
                    android:textAllCaps="true"
                    android:textColor="@color/eden"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTanggalPinjam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/tanggal_pinjam"
                    android:textAllCaps="false"
                    android:textColor="@color/eden"
                    android:textSize="@dimen/text_size_very_small" />

                <TextView
                    android:id="@+id/tvTanggalKembali"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_very_small"
                    android:text= "@string/tanggal_kembali"
                    android:textAllCaps="false"
                    android:textColor="@color/eden"
                    android:textSize="@dimen/text_size_very_small" />


            </LinearLayout>

            <ImageView
                android:id="@+id/bookBasketDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:background="@color/chardonnay"
                android:contentDescription="@string/book_image_description"
                android:padding="@dimen/padding_small"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

